--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,7 @@ android {
     }
     buildFeatures {
         viewBinding true
-        viewBinding = true
         dataBinding true
-        dataBinding = true
-    }
-    dataBinding{
-        enabled = true
-        enabled true
     }
 }
 
@@ -44,6 +38,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
