--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
 
 dependencies {
 
+    def supportVersion = "28.0.0"
+    def exoPlayerVersion = "2.8.4"  // 2.9.0 has min sdk 26
+
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
@@ -60,4 +63,12 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // for rounded corners - Glide
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
+
+
+    // Recyclerview
+    implementation "com.android.support:recyclerview-v7:$supportVersion"
+
+    // ExoPlayer
+    implementation "com.google.android.exoplayer:exoplayer:$exoPlayerVersion"
+
 }
