--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,6 @@ android {
 
 dependencies {
 
-    def supportVersion = "28.0.0"
-    def exoPlayerVersion = "2.8.4"  // 2.9.0 has min sdk 26
-
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
@@ -64,11 +61,7 @@ dependencies {
     // for rounded corners - Glide
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
-
-    // Recyclerview
-    implementation "com.android.support:recyclerview-v7:$supportVersion"
-
-    // ExoPlayer
-    implementation "com.google.android.exoplayer:exoplayer:$exoPlayerVersion"
-
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.12.0'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.12.0'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.12.0'
 }
