--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,8 +44,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- make sure within the application tag, otherwise app will crash with XmlResourceParser errors -->
+        </activity> <!-- make sure within the application tag, otherwise app will crash with XmlResourceParser errors -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.travelguide.fileprovider"
@@ -56,8 +55,9 @@
                 android:resource="@xml/fileprovider" />
         </provider>
 
-        <activity android:name=".activities.SearchActivity" />
-        <!--     The API key for Google Map API -->
+        <activity android:name=".activities.SearchPlacesActivity" />
+
+        <!-- The API key for Google Map API -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
