--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,10 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.android.libraries.places:places:2.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'org.jetbrains:annotations:15.0'
@@ -71,14 +71,15 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.14.2'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.14.2'
 
+    // put the parse libary before firebase (order matters)
+    // Parse Bolt and Parse FCM sdk
+    implementation "com.github.parse-community.Parse-SDK-Android:fcm:1.21.0"
+    implementation 'com.parse.bolts:bolts-android:1.4.0'
+
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
 
     // dependencies for the Firebase Cloud Messaging and Analytics libraries
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-analytics'
-
-    // Parse Bolt and Parse FCM sdk
-    implementation "com.github.parse-community.Parse-SDK-Android:fcm:1.21.0"
-    implementation 'com.parse.bolts:bolts-android:1.4.0'
 }
