--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-analytics'
 
+    implementation 'com.github.iammert:MultiSearchView:0.3'
+    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.8'
 }
